Fix stream shift toggle spacing for non-ultra users. (#5628)

--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -334,7 +334,6 @@ i.destination-logo {
 .feature-toggle {
   display: flex;
   align-items: center;
-  width: 135px;
   justify-content: space-between;
 
   :global(.ant-checkbox-wrapper) {
